style/styles.css
/* Global rules */
@font-face {
	font-family: 'PressStart2P';

	src:
		url('../fonts/PressStart2P.woff2') format('woff2'),
		url('../fonts/PressStart2P.woff') format('woff');

	font-weight: normal;
	font-style: normal;
}

html, head, body {
	margin: 0px;
	padding: 0px;
}

body {
	font-family: 'PressStart2P', 'sans-serif';
	font-size: 16px;
	background-color: #000;
	text-transform: uppercase;
	color: #fff;
}

a {
	text-decoration: none;
	padding-left: 2em;
	color: #fff;
	cursor: pointer;
}

a:hover:before {
	content: '\25b6\00a0';
	display: inline-block;
	color: #fff;
}

a:hover {
	margin-left: -2em;
}

a:hover, a.active {
	color: #ff0;
}

#app-container {
	margin: 0 auto;
	max-width: 1080px;
	min-width: 640px;
}
/* Game view */
#gameCanvas {
	background-color: #cccccc;
	min-height: 480px;
	min-width: 640px;
	width: 100%;
}

